Polishing for version 0.4

--- a/Slike/arcnet-data.tex
+++ b/Slike/arcnet-data.tex
@@ -1,6 +1,6 @@
 \begin{figure}[!h]
 	\centering
 	\includegraphics[scale=0.5]{./Slike/arcnet-data.eps}
-	\caption{Podatkovni del ARCNET paketa za krmiljenje robota}
+	\caption{Podatkovni del ARCNET paketa za krmiljenje robota v odvisnoti od tipa paketa.}
 	\label{fig:arcnet-data}
 \end{figure}
