--- a/Tabele/arcnet-command.tex
+++ b/Tabele/arcnet-command.tex
@@ -3,6 +3,7 @@
 	\centering
 	\begin{footnotesize}
 		\begin{tabular}{|l l l |}
+		\hline
 		Zap. \v{s}t. & Dol\v{z}ina & Opis podatka\\ \hline
 		0 & $1$ & ID po\v{s}iljatelja\\
 		1 & $1$ & ID prejemnika\\
