--- a/Tabele/udp-command.tex
+++ b/Tabele/udp-command.tex
@@ -3,6 +3,7 @@
 	\centering
 	\begin{footnotesize}
 		\begin{tabular}{|l l l l|}
+		\hline
 		Zap. \v{s}t. &  Dol\v{z}ina & Opis podatka & Tip podatka\\ \hline
 		0 & $7$ & Kontrolni bajt za posamezen motor & char \\
 		6 & $7$ & Referen\v{c}ni navor za posamezen motor & signed short int \\
@@ -12,6 +13,6 @@
 		97 & $1$ & Trenuten \v{c}as na klientu & float\\ \hline
 		\end{tabular}
 	\end{footnotesize}
-	\caption{Opis prejetega UDP paketa.}
+	\caption{Opis UDP paketa, ki ga klient po\v{s}lje stre\v{z}niku.}
 	\label{table:udp-command}
 \end{table}
