--- a/Tabele/udp-reply.tex
+++ b/Tabele/udp-reply.tex
@@ -3,6 +3,7 @@
 	\centering
 	\begin{footnotesize}
 		\begin{tabular}{|l l l l |}
+		\hline
 		Zap. \v{s}t. &  Dol\v{z}ina& Opis podatka & Tip podatka\\ \hline
 		0 & $7$ & Kontrolni bajt za posamezen motor & char \\
 		7 & $7$ & Trenuten kot v sklepu & float \\
@@ -13,6 +14,6 @@
 		116 & $1$ & \v{C}as, ki ga je poslal klient na bajtu 60 & float\\ \hline
 		\end{tabular}
 	\end{footnotesize}
-	\caption{Opis poslanega UDP paketa.}
+	\caption{Opis UDP paketa, ki ga stre\v{z}nik po\v{s}lje klientu.}
 	\label{table:udp-reply}
 \end{table}
